--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 
 </head>
 <body>
-    
+    <div id="homepage">
+
+        <div id="homepage-con" >
+            
+        </div>
+    </div>
 </html>
