--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    <div id="homepage">
+    <section id="homepage">
 
         <div id="homepage-con" >
+            <div class="search">
+                <button class="search-btn">New to Pokemon</button>
+                <input class="search-input" type="text" placeholder="Search here..">
+                <button class="search-btn">Random Pick</button>
+            </div>
+           
             
         </div>
-    </div>
+    </section>
 </html>
